[package]
name = "sc-consensus-pose"
version = "0.1.0"
edition = "2021"
description = "PoSE consensus utilities: app crypto key types and engine id"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
sc-consensus = { version = "0.10.0-dev", path = "../common" }
sp-runtime = { version = "24.0.0", path = "../../../primitives/runtime" }
sp-core = { version = "21.0.0", path = "../../../primitives/core" }
sc-network = { version = "0.10.0-dev", path = "../../network" }
sc-client-api = { version = "4.0.0-dev", path = "../../api" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../../transaction-pool" }
sp-blockchain = { version = "4.0.0-dev", path = "../../../primitives/blockchain" }
sp-block-builder = { version = "4.0.0-dev", path = "../../../primitives/block-builder" }
parity-scale-codec = { version = "3.6.1", features = ["derive"] }
sp-application-crypto = { version = "23.0.0", path = "../../../primitives/application-crypto" }
substrate-prometheus-endpoint = { version = "0.10.0-dev", path = "../../../utils/prometheus" }

[lib]
name = "sc_consensus_pose"
path = "src/lib.rs"
crate-type = ["rlib"]
